--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,6 @@
-.Header{
-  background-image:url('../background.jpeg');
-}
-.Experience{
-  border:1px #ccc solid;
-  padding:10px
-  boarder-radius:15px;
+body {
+  text-align: left;
+  background-color: black;
+  color: white;
+  font-family: helvetica;
 }
